[package]
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
categories = ["multimedia::images"]
description = "A pure-Rust, no_std compatible PNG decoder."
documentation = "https://docs.rs/png-decoder"
edition = "2018"
homepage = "https://github.com/bschwind/png-decoder"
keywords = ["png", "image", "decoder"]
license = "MIT OR Apache-2.0 OR Zlib"
name = "png-decoder"
readme = "README.md"
repository = "https://github.com/bschwind/png-decoder"
version = "0.1.1"

exclude = [
  "test_pngs/*",
]

[dependencies]
crc32fast = {version = "1.3.2", default-features = false}
miniz_oxide = {version = "0.7.1", default-features = false, features = ["with-alloc"]}
num_enum = {version = "0.5", default-features = false}

[dev-dependencies]
criterion = "0.3"
image = {version = "0.23", features = ["png"]}

[[bench]]
harness = false
name = "decode_benchmark"
